Fix CSS to repair overflow of sidebar items

--- a/scaladoc/resources/dotty_res/styles/scalastyle.css
+++ b/scaladoc/resources/dotty_res/styles/scalastyle.css
@@ -157,10 +157,10 @@ th {
 #sideMenu2 {
   overflow: auto;
   overflow-x: hidden;
-  overflow-y: scroll;
   scrollbar-width: thin;
   height: 100%;
   font-size: var(--leftbar-font-size);
+  margin-top: 5%;
 }
 
 /* divs in sidebar represent entry and its children */
@@ -199,19 +199,25 @@ th {
   display: flex;
   align-items: center;
   flex: 1;
-  overflow-x: hidden;
   overflow-wrap: anywhere;
   color: var(--leftbar-fg);
   margin-right: .5rem;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  width: 100%;
-  /* This trick adds selected background stretching to the left side of screen */
-  margin-left: calc(0px - var(--side-width));
-  padding-left: var(--side-width);
-  width: calc(2 * var(--side-width));
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: calc(var(--side-width));
+  padding-left: calc(0.05 * var(--side-width));
+  padding-right: calc(0.3 * var(--side-width));
+  box-sizing: border-box;
+}
+
+#sideMenu2 a span:not(.micon) {
+  margin-right: 0.75ex;
+  text-indent: -1.5em;
+  padding-left: 1.5em;
+}
+
+#sideMenu2 a.selected span:not(.micon) {
+  margin-right: 0.5ex;
 }
 
 #sideMenu2 a.selected {
@@ -231,14 +237,12 @@ th {
   position: absolute;
   right: 1em;
   top: 0px;
-  padding: 4px;
 }
 
 #sideMenu2 span.ar::before {
   content: "\e903"; /* arrow down */
   font-family: "dotty-icons" !important;
   font-size: 20px;
-  line-height: var(--leftbar-font-size);
   color: var(--leftbar-fg);
   display: flex;
   flex-direction: row;
